--- a/www/src/style/theme/main.less
+++ b/www/src/style/theme/main.less
@@ -3,3 +3,8 @@
 // Core variables and mixins
 @import "../bootstrap/variables.less";
 @import "@{bootstrapDir}mixins.less";
+
+
+html {
+    background-color: green;
+}
