--- a/src/style/bootstrap/main.less
+++ b/src/style/bootstrap/main.less
@@ -3,7 +3,7 @@
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@bootstrapDir: '../../../../bower_components/bootstrap/less/';
+@bootstrapDir: '../../../bower_components/bootstrap/less/';
 
 // Core variables and mixins
 @import "variables.less";
