--- a/src/style/theme/main.less
+++ b/src/style/theme/main.less
@@ -1,4 +1,4 @@
-@bootstrapDir: '../../../../bower_components/bootstrap/less/';
+@bootstrapDir: '../../../bower_components/bootstrap/less/';
 
 // Core variables and mixins
 @import "../bootstrap/variables.less";
